examples/test/testpolicy15123.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15123
  namespace: namespace384
spec:
  podSelector:
    matchLabels:
      key37: value28
      key1: value34
      key31: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value21
          key1: value16
          key22: value37
